--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
 #box{
     width: 1579px;
-    height: 100px;
+    height: 0px;
     margin: 0 auto;
     /* border: 1px solid red; */
 }
@@ -18,34 +18,61 @@ body {
     height: 100vh; */
     font-family: Arial, sans-serif;
 }
+.search-container{
+    /* background-color: #0066cc; */
+    width: 100px;
+    height: 40px;
+}
 .search-container input[type="text"] {
     width: 200px;
     height: 30px;
-    border: 1px solid #ddd;
-    border-radius: 1px;
+    
+    /* border-radius: 1px; */
+    position: relative;
+    bottom: 2px;
+    right: 140px;
+    outline: none;
+    border: 1px solid #eee;
 }
 .navbar {
-    display: flex;
+    position: relative;
+    top: 20px;
+    bottom: 10px;
+    height: 60px;
+    display: block;
     justify-content: space-between;
     align-items: center;
-    padding: 15px 50px;
-    border-bottom: 1px solid #eee;
+    /* padding: 15px 50px; */
+    /* border-bottom: 1px solid #eee; */
     background: #fff;
+    left: 100px;
+    margin-bottom: 20px;
 }
 
 .logo {
     height: 30px;
+    display: block;
+    position: relative;
+    top: 25px;
+    left: 30px;
 }
 
 .nav-links {
-    display: flex;
     list-style: none;
-    gap: 40px;
+    /* gap: 40px; */
     margin: 0;
     padding: 0;
 }
-
+.nav-links li{
+    float: left;
+    display: block;
+    margin-left: 30px;
+    margin-right: 30px;
+    position: relative;
+    left: 230px;
+}
 .nav-links a {
+    
     text-decoration: none;
     color: #333;
     font-size: 16px;
@@ -55,17 +82,31 @@ body {
 .nav-links a:hover {
     color: #0066cc;
 }
-
-.nav-icons {
-    display: flex;
-    gap: 20px;
+.nav-icons{
+    float: right;
+    position: relative;
+    width: 300px;
+    height: 30px;
+}
+.nav-icons img{
+    width: 25px;
+    height: 25px;
+    display: block;
+    /* gap: 20px; */
     align-items: center;
+    /* border: 10px solid pink; */
+    float: right;
+    position: relative;
+    bottom: 40px;
+    margin-right: 30px;
+    right: 100px;
 }
 
 .icon {
     cursor: pointer;
 }
 .banner img{
+    margin-top: 20px;
     width: 1579px;
     height: 526px;
 }
@@ -81,14 +122,21 @@ body {
     font-size: 45px;
 }
 .nav-links-2 {
-    width: 1575.8px;
+    width: 720px;
     height: 24px;
-    display: flex;
+    display: block;
     list-style: none;
-    gap: 150px;
-    margin: 0;
+    /* gap: 150px; */
+    margin: 0 auto;
     padding: 0;
-    justify-content: center;
+    /* justify-content: center; */
+}
+
+.nav-links-2 li{
+    float: left;
+    display: block;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 .nav-links-2 a {
     text-decoration: none;
@@ -114,29 +162,29 @@ body {
 }
 .newwind {
     /* border: 1px solid red; */
-    width: 200px;
+    width: 300px;
     height: 10px;
     position: absolute;
     top: 520px;
     bottom: 0px;
     right: 0px;
-    left: 285px; 
+    left: 275px; 
     font-size: 20px; 
 }
 .code{
     /* border: 1px solid red; */
-    width: 170px;
+    width: 300px;
     height: 10px;
     position: absolute;
     top: 570px;
     bottom: 0px;
     right: 0px;
-    left: 300px; 
+    left: 290px; 
     font-size: 14px;
     color: grey;
 }
 .product-showcase-2{
-    display: flex;
+    display: block;
     width: 700px;
     height: 630px;
     margin-left: 629px;
@@ -153,9 +201,10 @@ body {
 }
 #box-3{
     position: relative;
+    margin-bottom: 300px;
 }
 .banner2 img{
-    display: flex;
+    display: block;
     width: 1579px;
     height: 800px;
     margin-top:80px;
@@ -174,16 +223,21 @@ body {
     margin-bottom: 60px;
 }
 .nav-links-3 {
-    width: 1580px;
+    width: 880px;
     height: 24px;
-    display: flex;
+    display: block;
     list-style: none;
-    gap: 140px;
-    margin: 0;
+    /* gap: 140px; */
+    margin: 0 auto;
     padding: 0;
-    justify-content: center;
+    /* justify-content: center; */
     margin-bottom: 70px;
-
+}
+.nav-links-3 li{
+    float: left;
+    display: block;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 .nav-links-3 a {
     text-decoration: none;
@@ -224,7 +278,7 @@ body {
 }
 .code-2{
     /* border: 1px solid red; */
-    width: 150px;
+    width: 220px;
     height: 10px;
     position: absolute;
     top: 1560px;
@@ -267,7 +321,7 @@ body {
 }
 .code-3{
     /* border: 1px solid red; */
-    width: 150px;
+    width: 220px;
     height: 10px;
     position: absolute;
     top: 1560px;
@@ -310,7 +364,7 @@ body {
 }
 .code-4{
     /* border: 1px solid red; */
-    width: 160px;
+    width: 220px;
     height: 10px;
     position: absolute;
     top: 1560px;
@@ -347,6 +401,7 @@ body {
     margin: 0 auto;
 }
 .pro-1,.pro-2,.pro-3{
+    float: right;
     box-shadow: 0 4px 6px 1px #aaa;
     height: 700px;
 }
@@ -396,16 +451,23 @@ body {
 }
 #box-4{
     position: relative;
+    /* width: 1200px;
+    height: 580px;
+    margin: 0 auto; */
 }
-.story img{
+/* .story{
     width: 1200px;
     height: 580px;
-    display: flex;
+} */
+.image10{
+    width: 1200px;
+    height: 580px;
+    display: block;
     margin: 0 auto;
 }
 .text-1{
     position: absolute;
-    top: 200px;
+    top: 10px;
     bottom: 0px;
     right: 0px;
     left: 980px;
@@ -420,7 +482,7 @@ body {
     position: absolute;
     overflow: hidden;
     text-overflow: ellipsis;
-    top: 270px;
+    top: 90px;
     bottom: 0px;
     right: 0px;
     left: 980px;
@@ -433,10 +495,10 @@ body {
 }
 .text-3{
     position: absolute;
-    top: 640px;
+    top: 440px;
     bottom: 0px;
     right: 0px;
-    left: 198px;
+    left: 190px;
     /* border: 1px solid blue; */
     width: 140px;
     height: 50px;
@@ -448,10 +510,10 @@ body {
     position: absolute;
     overflow: hidden;
     text-overflow: ellipsis;
-    top: 710px;
+    top: 510px;
     bottom: 0px;
     right: 0px;
-    left: 198px;
+    left: 190px;
     /* border: 1px solid red; */
     width: 400px;
     height: 50px;
@@ -508,7 +570,7 @@ body {
 .title-2{
     margin-bottom: 60px;
     padding-top: 30px;
-    width: 130px;
+    width: 150px;
     margin: 0 auto;
     margin-bottom: 50px;
     
